2008-07-24  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Make isElementNode() non-virtual for a speedup on many benchmarks
        including 20% on http://ejohn.org/apps/fragment/.

        - Replace Node::m_attrWasSpecifiedOrElementHasRareData with bits in 
          Element and Attr where space was available.  Use the new free bit
          to represent if an node is an element or not.

        * dom/Attr.cpp:
        (WebCore::Attr::Attr):
        * dom/Attr.h:
        (WebCore::Attr::specified):
        (WebCore::Attr::setSpecified):
        * dom/ContainerNode.cpp:
        (WebCore::ContainerNode::ContainerNode):
        * dom/ContainerNode.h:
        * dom/Element.cpp:
        (WebCore::Element::Element):
        * dom/Element.h:
        (WebCore::Element::hasRareData):
        (WebCore::Element::setHasRareData):
        * dom/EventTargetNode.cpp:
        (WebCore::EventTargetNode::EventTargetNode):
        * dom/EventTargetNode.h:
        * dom/Node.cpp:
        (WebCore::Node::Node):
        * dom/Node.h:
        (WebCore::Node::isElementNode):

2008-07-24  Dan Bernstein  <mitz@apple.com>

        Reviewed by Dave Hyatt.

        - fix <rdar://problem/6082111> REGRESSION (r31876): Root element with percent height does not resize when resizing the window vertically

        Not testable in DumpRenderTree

        * rendering/RenderView.cpp:
        (WebCore::RenderView::layout): Ensured that all children with percentage
        heights get laid out again if the height changes.

2008-07-24  kevino  <kevino@theolliviers.com>

        Windows build fix for wx. wx doesn't implement pan scrolling yet. 

        * page/EventHandler.cpp:
        (WebCore::EventHandler::handleAutoscroll):
        (WebCore::EventHandler::autoscrollTimerFired):
        (WebCore::EventHandler::stopAutoscrollTimer):
        (WebCore::EventHandler::handleMousePressEvent):

2008-07-24  David Hyatt  <hyatt@apple.com>
