@@ -264,7 +264,7 @@ void PluginDatabase::remove(PluginPackage* package)
     m_pluginsByPath.remove(package->path());
 }
 
-#if !PLATFORM(WIN_OS)
+#if !PLATFORM(WIN_OS) || PLATFORM(WX)
 // For Safari/Win the following three methods are implemented
 // in PluginDatabaseWin.cpp, but if we can use WebCore constructs
 // for the logic we should perhaps move it here under XP_WIN?
