@@ -1,3 +1,12 @@
+2008-07-24  kevino  <kevino@theolliviers.com>
+
+        wx build fix on Win for plugins coode.
+
+        * plugins/PluginDatabase.cpp:
+        * plugins/PluginView.cpp:
+        (WebCore::PluginView::PluginView):
+        * plugins/PluginView.h:
+
 2008-07-24  Sam Weinig  <sam@webkit.org>
 
         Reviewed by Anders Carlsson.
